# advent-of-code

./: README.md  pyproject.toml
2022/day1/: calorie_counting_part1.py  calorie_counting_part2.py
2022/day10/: cathode_ray_tube.py
2022/day13/: distress_signal.py
2022/day2/: rock_paper_scissors_part1.py  rock_paper_scissors_part2.py
2022/day3/: rucksack_reorganization.py  rucksack_reorganization_part2.py
2022/day4/: camp_cleanup.py
2022/day5/: stacks.txt  supply_stacks.py
2022/day8/: treetop_tree_house.py
2022/day9/: rope_bridge.py  rope_bridge_part2.py
2023/01/: main.py
2023/02/: main.py
2023/03/: main.py
2023/04/: main.py
2023/06/: main.py
cli/: helper.py  main.py
utils/: text.py
