[tool.poetry]
name = "advent-of-code"
version = "2023"
description = ""
authors = ["Aris Chow <hello@arisc.how>"]
readme = "README.md"
packages = [
    { include = "cli" },
]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"

[tool.poetry.scripts]
aoc = "cli.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
